fix overflow

--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -5,6 +5,11 @@
     width: 100%;
 }
 
+.row {
+    margin-right: 0px;
+    margin-left: 0px;
+}
+
 .landingimg{
     width: 100%;
 }
